--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
             <h3>Teamwork management plataform. Your skills and crew fully functional.</h3>
             <br>
             <a type="button" id="button-strong" class="btn btn-default btn-lg" href="login.html">
-              Login
+              Demo
             </a>
             <a type="button" id="button-strong" class="btn btn-default btn-lg" href="signup.html">
               Register
