Home Page implementation

--- a/www/home.html
+++ b/www/home.html
@@ -106,45 +106,18 @@
       </div>
       <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
+          <a href="project.html">
             <div class="thumbnail">
-              <h4>Project Title</h4>
-              <p>Quests in progress: 5</p>
-              <p>Quests available: 4</p>
+              <h4>The Return of the King</h4>
+              <p>Quests in progress:  6</p>
+              <p>Quests available: 0</p>
               <br>
-              <p><span class="glyphicon glyphicon-calendar"></span> Start Date: mm/dd/yyyy</p>
-              <p><span class="glyphicon glyphicon-calendar"></span> Due Date: mm/dd/yyyy</p>
+              <p><span class="glyphicon glyphicon-calendar"></span> Start Date: 12/22/1996</p>
+              <p><span class="glyphicon glyphicon-calendar"></span> Due Date: 12/22/2016</p>
             </div>
           </a>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
 
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
-            </div>
-          </a>
-        </div>
       </div>
 
       <div class="row">
@@ -154,20 +127,12 @@
       </div>
       <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
+          <a href="project.html">
             <div class="thumbnail thumb-quest">
-              <h4>Quest Title</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-
+              <h4>Just go</h4>
+              <p>There and back again.</p>
+              <h6 class="card-subtitle text-muted">SKILL run +9000"xp</h6>
+              <h6 class="card-subtitle text-muted">SKILL track +42xp</h6>
             </div>
           </a>
         </div>
@@ -180,20 +145,14 @@
       </div>
       <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
+          <a href="project.html">
             <div class="thumbnail">
-              <h4>Project Title</h4>
-              <p>Quests available: 4</p>
-              <br><br>
-              <p><span class="glyphicon glyphicon-calendar"></span> Start Date: mm/dd/yyyy</p>
-              <p><span class="glyphicon glyphicon-calendar"></span> Due Date: mm/dd/yyyy</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
+              <h4>The Return of the King</h4>
+              <p>Quests in progress:  6</p>
+              <p>Quests available: 0</p>
+              <br>
+              <p><span class="glyphicon glyphicon-calendar"></span> Start Date: 12/22/1996</p>
+              <p><span class="glyphicon glyphicon-calendar"></span> Due Date: 12/22/2016</p>
             </div>
           </a>
         </div>
